<resources>
    <string name="app_name">LocalScanner</string>
<<<<<<< HEAD
=======
    <string name="deviceInfoLabel">Current user info</string>
    <string name="macAddress">MAC Address</string>
    <string name="internalIpLabel">Internal IP Address</string>
    <string name="externalIpLabel">External IP Address</string>
    <string name="signalLabel">Signal Strength</string>
>>>>>>> 10d00b732277dc23876ee147e0d2cf2407bc4b84
    <string name="hostDiscovery">Discover LAN Hosts</string>
    <string name="noWifi">No WiFi connection</string>
</resources>
