<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hivemind.zerodavila.localscanner.MainActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:padding="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/programTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingBottom="5dp"
            android:text="@string/app_name"
<<<<<<< HEAD
            android:textColor="@color/grey"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_below="@id/programTitle">
=======
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/deviceInfoLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/programTitle"
            android:layout_centerHorizontal="true"
            android:text="@string/deviceInfoLabel"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/green" />

        <TableLayout
            android:id="@+id/deviceInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/deviceInfoLabel"
            android:stretchColumns="*">

            <TableRow android:layout_width="0dp">

                <TextView
                    android:id="@+id/deviceMacAddressLabel"
                    style="@style/DeviceInfoItem"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/macAddress"
                    android:textColor="@color/green" />

                <TextView
                    android:id="@+id/deviceMacAddress"
                    style="@style/DeviceInfoItem"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:textColor="@color/green"/>
            </TableRow>

            <TableRow android:layout_width="0dp">

                <TextView
                    android:id="@+id/internalIpAddressLabel"
                    style="@style/DeviceInfoItem"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/internalIpLabel"
                    android:textColor="@color/green" />

                <TextView
                    android:id="@+id/internalIpAddress"
                    style="@style/DeviceInfoItem"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:textColor="@color/green" />
            </TableRow>

            <TableRow android:layout_width="0dp">

                <TextView
                    android:id="@+id/signalStrengthLabel"
                    style="@style/DeviceInfoItem"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/signalLabel"
                    android:textColor="@color/green" />

                <TextView
                    android:id="@+id/signalStrength"
                    style="@style/DeviceInfoItem"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:textColor="@color/green" />
            </TableRow>

        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/deviceInfo"
            android:orientation="vertical">
>>>>>>> 10d00b732277dc23876ee147e0d2cf2407bc4b84

            <ListView
                android:id="@+id/hostList"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:cacheColorHint="@color/black" />

            <Button
                android:id="@+id/discoverHosts"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:minHeight="1dp"
                android:minWidth="1dp"
                android:text="@string/hostDiscovery"
                android:textColor="@drawable/button_text"
                android:textSize="14sp" />
<<<<<<< HEAD

=======
>>>>>>> 10d00b732277dc23876ee147e0d2cf2407bc4b84
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
